# Kalshi-Volume-Bot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.yaml  settings.py
scripts/: __init__.py  run_bot.py
src/api/: __init__.py  auth.py  client.py  exceptions.py  rate_limiter.py
src/core/: __init__.py  bot.py
src/executor/: __init__.py  exit_handler.py  order_manager.py  position_monitor.py
src/models/: __init__.py  market.py  order.py  position.py
src/portfolio/: __init__.py  compound.py  tracker.py
src/scanner/: __init__.py  categories.py  filters.py  market_scanner.py
src/strategy/: __init__.py  high_probability.py  position_sizer.py
